--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <activity
             android:name=".ui.WebActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/Tran"/>
+            android:theme="@style/Tran"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
     </application>
 
 </manifest>
